use JLS 11, allow markdown javadocs, require JDK 24 (retargeting experiment phase 2)